# qt-project

./: CMakeLists.txt  main.qml
